--- a/style.css
+++ b/style.css
@@ -5,8 +5,11 @@
 
 .logo{
     align: right;
-    height: 65px;
-    width: 65px;
+    height: 75px;
+    width: 75px;
+    position: absolute;
+    top: 10px;
+    right: 0px; 
 }
 
 .graph{
@@ -18,17 +21,16 @@ h2 {
     background-color: #53419A ;
     border-style: solid;
     border-width: thin;
-    padding: 14px;
+    padding: 10px;
     font-family: monospace;
     color: white;
      
 }
 
 .topright {
-        position: relative;
-        top: 16px;
-        right: 16px;
-        
+        position: absolute;
+        top: 0px;
+        right: 0px; 
     }
 
 p {
