--- a/style.css
+++ b/style.css
@@ -5,11 +5,12 @@
 
 .logo{
     align: right;
-    height: 75px;
-    width: 75px;
+    height: 60px;
+    width: 60px;
     position: absolute;
     top: 10px;
-    right: 0px; 
+    right: 0px;
+     
 }
 
 .graph{
@@ -18,12 +19,13 @@
 }
 
 h2 {
-    background-color: #53419A ;
+    background-color: rgb(109, 164, 185) ;
     border-style: solid;
     border-width: thin;
-    padding: 10px;
+    padding: 9px;
     font-family: monospace;
     color: white;
+    font-size: 2ch;
      
 }
 
@@ -39,4 +41,8 @@ p {
     border-width: thin;
     padding: 10px;
     font-family: monospace
+}
+
+.centertable {
+    margin: 0px auto;
 }
