die css aangepast naar de main branch

--- a/template/template.html
+++ b/template/template.html
@@ -15,7 +15,7 @@
 </p>
 <h2>MSI Result by region (mSINGS)</h2>
 
-<table align="center">
+<table class="centertable">
     <tr></tr>
         <th><div class="graph1"></th>
         <th><div class="graph2"></th>
@@ -38,7 +38,7 @@
     <u>mSINGS score: </u><br>
     <br>
     &leq;2 : MSS (Microsatellite Stability) <br>
-    >2  : MSI (Microsatellite Instability
+    >2  : MSI (Microsatellite Instability)
     </p>
 <p> 
     mSINGS score = <b> {{ score }} </b> <br>
