--- a/template/style.css
+++ b/template/style.css
@@ -5,101 +5,118 @@
 
 .logo{
     position: absolute;
-    background-image: url('logo.png');
+    background-image: url('img/logo.png');
     background-size: 75px 75px;
+    background-repeat: no-repeat;
     height: 75px;
     width: 75px;
     top: 10px;
-    right: 0px;
+    right: 0px;   
+}
+
+.centertable{
+    margin: 0px auto;
 }
 
 .graph1{
-    background-image: url('1.png');
+    background-image: url('img/1.png');
     background-size: 150px 150px;
+     background-repeat: no-repeat;
     height: 150px;
     width: 150px;
 }
 
 .graph2{
-    background-image: url('2.png');
+    background-image: url('img/2.png');
     background-size: 150px 150px;
+     background-repeat: no-repeat;
     height: 150px;
     width: 150px;
 }
 
 .graph3{
-    background-image: url('3.png');
+    background-image: url('img/3.png');
     background-size: 150px 150px;
+     background-repeat: no-repeat;
     height: 150px;
     width: 150px;
 }
 
 .graph4{
-    background-image: url('4.png');
+    background-image: url('img/4.png');
     background-size: 150px 150px;
+     background-repeat: no-repeat;
     height: 150px;
     width: 150px;
 }
 
 .graph5{
-    background-image: url('5.png');
+    background-image: url('img/5.png');
     background-size: 150px 150px;
+     background-repeat: no-repeat;
     height: 150px;
     width: 150px;
 }
 
 
 .graph6{
-    background-image: url('6.png');
+    background-image: url('img/6.png');
     background-size: 150px 150px;
+     background-repeat: no-repeat;
     height: 150px;
     width: 150px;
 }
 
 .graph7{
-    background-image: url('7.png');
+    background-image: url('img/7.png');
     background-size: 150px 150px;
+     background-repeat: no-repeat;
     height: 150px;
     width: 150px;
 }
 
 .graph8{
-    background-image: url('8.png');
+    background-image: url('img/8.png');
     background-size: 150px 150px;
+     background-repeat: no-repeat;
     height: 150px;
     width: 150px;
 }
 
 .graph9{
-    background-image: url('9.png');
+    background-image: url('img/9.png');
     background-size: 150px 150px;
+     background-repeat: no-repeat;
     height: 150px;
     width: 150px;
 }
 
 .graph10{
-    background-image: url('10.png');
+    background-image: url('img/10.png');
     background-size: 150px 150px;
+     background-repeat: no-repeat;
     height: 150px;
     width: 150px;
 }
 
 .graph11{
-    background-image: url('11.png');
+    background-image: url('img/11.png');
     background-size: 150px 150px;
+     background-repeat: no-repeat;
     height: 150px;
     width: 150px;
 }
 
 .graph12{
-    background-image: url('12.png');
+    background-image: url('img/12.png');
     background-size: 150px 150px;
+     background-repeat: no-repeat;
     height: 150px;
     width: 150px;
 }
 
 h2 {
-    background-color: #53419A ;
+    background-color: rgb(109, 164, 185);
     border-style: solid;
     border-width: thin;
     padding: 14px;
