aangepast voor report fig

--- a/template/style.css
+++ b/template/style.css
@@ -18,97 +18,8 @@
     margin: 0px auto;
 }
 
-.graph1{
-    background-image: url('img/1.png');
-    background-size: 150px 150px;
-     background-repeat: no-repeat;
-    height: 150px;
-    width: 150px;
-}
-
-.graph2{
-    background-image: url('img/2.png');
-    background-size: 150px 150px;
-     background-repeat: no-repeat;
-    height: 150px;
-    width: 150px;
-}
-
-.graph3{
-    background-image: url('img/3.png');
-    background-size: 150px 150px;
-     background-repeat: no-repeat;
-    height: 150px;
-    width: 150px;
-}
-
-.graph4{
-    background-image: url('img/4.png');
-    background-size: 150px 150px;
-     background-repeat: no-repeat;
-    height: 150px;
-    width: 150px;
-}
-
-.graph5{
-    background-image: url('img/5.png');
-    background-size: 150px 150px;
-     background-repeat: no-repeat;
-    height: 150px;
-    width: 150px;
-}
-
-
-.graph6{
-    background-image: url('img/6.png');
-    background-size: 150px 150px;
-     background-repeat: no-repeat;
-    height: 150px;
-    width: 150px;
-}
-
-.graph7{
-    background-image: url('img/7.png');
-    background-size: 150px 150px;
-     background-repeat: no-repeat;
-    height: 150px;
-    width: 150px;
-}
-
-.graph8{
-    background-image: url('img/8.png');
-    background-size: 150px 150px;
-     background-repeat: no-repeat;
-    height: 150px;
-    width: 150px;
-}
-
-.graph9{
-    background-image: url('img/9.png');
-    background-size: 150px 150px;
-     background-repeat: no-repeat;
-    height: 150px;
-    width: 150px;
-}
-
-.graph10{
-    background-image: url('img/10.png');
-    background-size: 150px 150px;
-     background-repeat: no-repeat;
-    height: 150px;
-    width: 150px;
-}
-
-.graph11{
-    background-image: url('img/11.png');
-    background-size: 150px 150px;
-     background-repeat: no-repeat;
-    height: 150px;
-    width: 150px;
-}
-
-.graph12{
-    background-image: url('img/12.png');
+.graph{
+    background-image: url('report.png');
     background-size: 150px 150px;
      background-repeat: no-repeat;
     height: 150px;
