--- a/template/template.html
+++ b/template/template.html
@@ -17,20 +17,7 @@
 
 <table class="centertable">
     <tr></tr>
-        <th><div class="graph1"></th>
-        <th><div class="graph2"></th>
-        <th><div class="graph3"></th>
-        <th><div class="graph4"></th>
-    <tr></tr>
-        <th><div class="graph5"></th>
-        <th><div class="graph6"></th>
-        <th><div class="graph7"></th>
-        <th><div class="graph8"></th>
-    <tr></tr>
-        <th><div class="graph9"></th>
-        <th><div class="graph10"></th>
-        <th><div class="graph11"></th>
-        <th><div class="graph12"></th>
+        <th><div class="graph"></th>
 </table>
 
 <h2>Conclusion</h2>
