--- a/template/img/style.css
+++ b/template/img/style.css
@@ -5,7 +5,7 @@
 
 .logo{
     position: absolute;
-    background-image: url('img/logo.png');
+    background-image: url('logo.png');
     background-size: 75px 75px;
     background-repeat: no-repeat;
     height: 75px;
