--- a/template/template.html
+++ b/template/template.html
@@ -15,11 +15,8 @@
 </p>
 <h2>MSI Result by region (mSINGS)</h2>
 
-<table class="centertable">
-    <tr></tr>
-        <th><div class="graph"></th>
-</table>
-
+<div class="graph"></div>
+   
 <h2>Conclusion</h2>
 <p> 
     <u>mSINGS score: </u><br>
