--- a/template/style.css
+++ b/template/style.css
@@ -19,11 +19,13 @@
 }
 
 .graph{
-    background-image: url('report.png');
-    background-size: 150px 150px;
-     background-repeat: no-repeat;
-    height: 150px;
-    width: 150px;
+    background-image: url('/home/wall-e/Stageproject/report.png');
+    background-size: auto;
+    background-repeat: no-repeat;
+    height: 450px;
+    width: 650px;
+    margin: 0px auto;
+    padding: 5px
 }
 
 h2 {
@@ -33,7 +35,7 @@ h2 {
     padding: 14px;
     font-family: monospace;
     color: white;
-     
+    font-size: 18
 }
 
 .topright {
